# WS185-DroneModule

./: .gitignore  CMakeLists.txt  README.md  mergeBins.sh  partitions.csv  sdkconfig
SquareLine/: SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py
adaptor/: Module Adaptor 030.stl  Module Adaptor 060.stl  Module Adaptor 090.stl  Module Adaptor 120.stl  Module Adaptor 150.stl  Module Adaptor 210.stl  Module Adaptor 240.stl  Module Adaptor 270.stl  Module Adaptor 300.stl  Module Adaptor 330.stl
main/: CMakeLists.txt  globals.h  idf_component.yml  main.cpp  options.cpp  power.cpp
main/EXIO/: TCA9554PWR.h
main/I2C_Driver/: I2C_Driver.h
main/LCD_Driver/: ST77916.c  ST77916.h
main/LCD_Driver/esp_lcd_st77916/: esp_lcd_st77916.c
main/LVGL_Driver/: LVGL_Driver.c  LVGL_Driver.h
main/MIC_Driver/: MIC_Driver.cpp  MIC_Driver.h
main/PWR_Key/: PWR_Key.cpp  PWR_Key.h
main/QMI8658/: QMI8658.c  QMI8658.h
main/Touch_Driver/: CST816.c  CST816.h
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h
main/ui/images/: ui_img_brk360_png.c  ui_img_cpu360_png.c  ui_img_hal9000_png.c  ui_img_hexcorp360_png.c  ui_img_hive360_png.c  ui_img_rollindicator_png.c  ui_img_spiral360_png.c
main/ui/screens/: ui_Audio.c  ui_Images.c  ui_Options.c  ui_Power.c  ui_Splash.c
